[tool.poetry]
name = "statistics"
version = "0.1.0"
description = ""
authors = ["Vel-Vladimir <vel.vlad.optimus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
